# honeycomb

./: README.md  checkin  hc_version  hc_version.old  oldbuild.xml
AlertViewer/: Manifest.mf  build.properties  build.xml
AlertViewer/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
adm/: build.properties  build.xml
admingui/: build.properties  build.xml
admingui/help/: README  hc_hlp.jhm
admingui/pkg/: depend  pkginfo  postinstall  preremove  prototype
admingui/web/: AdminGuiKeystore  admgui.jnlp.template
build_demos/: build.properties
client/: build.properties  build.xml
client_c/: build.properties  build.xml  configure.pl  currentos.pl  getos.pm
client_c/examples/: AddMetadata.c  CheckIndexed.c  DeleteRecord.c  Makefile  Query.c  README  RetrieveData.c  RetrieveMetadata.c  RetrieveSchema.c  StoreFile.c
client_c/tools/: Makefile.env.template  Makefile.template  env.Linux  env.Win32  env.macOSX  env.sol_10_sparc  env.sol_10_x86  mkmerge.c  profile.curl.template  profile.honeycomb.template  profile.test.template
common/: build.properties  build.xml
demos/: build.properties  build.xml
demos/MusicDrop/: Controller.h  Controller.m  DropBox.h  DropBox.m  Icon.icns  Id3Wrapper.h  Id3Wrapper.m  Info.plist  MusicDrop_Prefix.pch  Store.h  Store.m  ThreadArg.h  ThreadArg.m  button_info-N.tiff  icon.psd  main.m
demos/client-fs/: build.xml
demos/hcscp/: Makefile  README  atomicio.c  atomicio.h  hcscp.c  includes.h  metadata_config_scp.xml  progressmeter.c  xmalloc.c
demos/media-upload-app/: MANIFEST.MF  build.xml
demos/mp3-disklet/: build.xml  scilla-src.tgz
demos/mp3-upload-app/: MANIFEST.MF  build.xml  run_cmdline.sh
demos/photo-client/: MANIFEST.MF  MANIFEST.MF.cmdline  build.xml
demos/shoutcast-server/: HCIce.c  HCIce.h  HCIce.java  HCShout.java  Makefile  README  run_hcshout.sh
emulator/: README.txt  build.properties  build.xml  foo
emulator/doc/: Emulator_Setup_and_Configuration.html
extractor/: build.xml
extractor/src/: ExtractLibs.pm  README.extractor  README.scraper  extractAdmin.pl  extractBswitch.pl  extractFswitch.pl  extractNode.pl  extractSP.pl  extractor.cmds  extractor.pl  log_scraper.pl
filesystem/: build.properties  build.xml
hctest/: README  build.properties  build.xml
hctest/dtf/: MANIFEST.MF  TODO  ant.sh  build.properties  build.xml  dtf.dtd  run.xml
hctest/hc-dtf/: MANIFEST.MF  README  build.properties  build.xml  hc.dtd  hcrun.xml
itest/: README  build.xml
md_caches/: build.xml
md_caches/bdb_common/: ATimeCompare.java  BDBCache.java  (+1 more)
md_clustra/: build.properties  build.xml
mgmt/: build.properties  build.xml
ndmp/: build.xml
performance/: build.xml
prototypes/: README  prototype.bat  prototype.c  prototype.csh  prototype.h  prototype.java  prototype.ksh  prototype.mof  prototype.nib  prototype.pl  prototype.sh  prototype.sql  prototype.txt  prototype.xml
release/: README.txt
sdk/: LICENSE.txt  MANIFEST  README  README.lyx  StorageTek_5800_SLA&Entitlement&PRN.txt  build.properties  build.xml  version
server/: build.properties  build.xml  checkin  data
server/src/native/cm/: Makefile.am  README  configure.in
server/src/native/cm/docs/design/: cm.eps  cm.lyx  cm_services.eps  states.dia  states.eps
server/src/native/cm/md_tests/: Makefile.am  md_test.sh.in  md_test_config.xml.in  md_test_fmwk.in  reset_fmwk.sh.in
server/src/native/cm/src/: Makefile.am  run_tests.sh
server/src/native/cm/src/CMM/: Makefile.am  api.c  api.h  clustermode_cnt  cmm.h  cmm_internal_types.h  cmm_parameters.h  cnt.c  cnt.h  comm.c  comm.h  election.c  election.h  fifo_mt.c  fifo_mt.h  frame.c  frame.h  heartbeat.c  heartbeat.h  lobby.c  lobby.h  main.c  sender.c  sender.h  singlenode_cnt  stack.c  stack.h  utils.c  utils.h
server/src/native/cm/src/CMM/lib/: Makefile.am  lib_cmm.c  mapfile
server/src/native/cm/src/CMM/tools/: Makefile.am  checkmaster.c  clustermonitor.c  cmm_check.pl  cmm_consistency_check.c  cmm_mastership_release.c  cmm_qualif.c  getallnodes.c  getinfo.c  hc_compute_nodeid.c  hccmmrole.c  hcgetconf.c
server/src/native/cm/src/common/: Makefile.am  config_reader.sh.in  disklets.conf  ftpd.conf  hc_logging.properties  mysql_config.sql  nodemgr_mailbox.sh.in  serialization.c  serialization.h  start_ftp.sh.in
server/src/native/cm/src/htdocs/: Makefile.am  bottom.html  index.html  top.html
server/src/native/cm/src/mailbox/: Makefile.am  conf.h  jmbox.c  mbox.c  mbox.h  mboxd.c  network.c  test_mailbox.c
server/src/native/cm/src/node_mgr/: Makefile.am  action.c  action.h  cmm_interface.c  cmm_interface.h  config.c  config.h  config_test.xml  dummy_mailbox.c  errors.h  factory.c  factory.h  forker.c  forker.h  forker_stub.c  hcnm_client.c  list.c  list.h  mailbox.c  mailbox.h  mailbox_stub.c  main.c  node_config.xml.in  probe_disk.c  scheduler.c  scheduler.h  sequence.c  sequence.h  server.c  server.h  service_monitor.c  service_monitor.h  test_action.c  test_config.c  test_list.c  test_sequence.c  test_tree.c  tree.c  tree.h
server/src/native/cm/src/services/: Makefile.am
server/src/native/cm/src/services/disk/: Makefile.am  disk.c  disk.h  disk_check.sh  hcdisk_adm.c  hcdisk_adm.h  main.c  mbdisk.c  mbdisk.h  stat.c
server/src/native/cm/src/services/ifconfig/: Makefile.am  get_external_ip.sh  get_internal_ip.sh  ifconfig_service.c  restart_pmap.sh
server/src/native/cm/src/services/system/: Makefile.am  hcstat.c  hcstat.h  meminfo.c  sysinfo.c
server/src/native/cm/src/tcp_abort/: Makefile.am  Makefile.orig  ksym_addr.sh  tcp_abort.c  tcp_abort.h  tcp_abort.txt  tcp_ksyms.c  tcp_test.c
server/src/native/cm/src/trace/: Makefile.am  stdout_trace.c  syslog_trace.c  trace.h
suitcase/: README  build.properties  build.xml
test/: build.properties  build.xml
tools/: check_and_update_fileheaders.pl  checkstyle_bloch_checks.xml  checkstyle_sun_checks.xml  configure+make.sh  cvssig  install_linux.sh  install_solaris.sh  mkimage.sh  webdiff.sh
unit_tests/: README  build.properties  build.xml  test.list
whitebox/: build.properties  build.xml
(+4165 files in other folders)
